benchmark scripts were updated